--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -2,7 +2,6 @@
   background-image: url("../../assets/HomeBackground.png");
   background-position: center;
   background-color: black;
-  margin-bottom: 2em;
 }
 
 /* Introduction */
